2013-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BatchCommand): Flush stdout at key points in
	order to ensure that user sees text when it is produced.

2013-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/random.c (InitializeMagickRandomGenerator): Use
	MagickTsdKeyCreate2() in order to avoid a small memory leak.

	* magick/tsd.c (MagickTsdKeyCreate2): New private function to
	support allocating a thread-specific data key with a specified
	destructor function.  For single-threaded build, MagickTsdKey_t is
	now type void* and there is provision to support the destructor
	function.

2013-01-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BatchCommand): New 'gm batch' command to
	accept one or more GraphicsMagick commands from a specified text
	file, standard input, or CLI.  Feature is implemented by Kenneth
	Xu.  Submitted via SourceForge Patch #3602331 "Add interactive or
	batch mode support to 1.3.17".

2013-01-27  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (WriteOnePNGImage): Added PNG48 and PNG64 support.
	Added PNG00 support (png encoder that inherits its color-type and
	bit-depth from the input, if the input was a PNG datastream).

2013-01-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (WriteOnePNGImage): PNG8 support was using
	image->colors to decide if the input image is PseudoClass.  This
	is totally bogus.  Use image->storage_class to determine if image
	is PseudoClass and quantize image colors if it is not.

	* magick/delegate.c (InvokePostscriptDelegate): Only invoke
	MagickSpawnVP() if Ghostscript filename argument is non-empty.
	This argument may be empty if Ghostscript is not found on a
	Windows system.  Report a "Failed to find Ghostscript" error if
	the Ghostscript command name is empty. Resolves SourceForge issue
	#3601816 "Win64 build crashes trying to convert PDF to any other
	format".
