@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020130131"
-#define public MagickPackageReleaseDate "snapshot-20130131"
+#define public MagickPackageVersionAddendum ".020130201"
+#define public MagickPackageReleaseDate "snapshot-20130201"
