@@ -1,3 +1,9 @@
+2013-02-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/studio.h (MagickIsBlank): Add macro to substitute for ISO
+	C99 isblank() which is not globally available.  Update 'gm batch'
+	code which had substituted isspace() for isblank() to use it.
+
 2013-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/command.c (BatchCommand): Flush stdout at key points in
